--- a/html/mobile/tags.html
+++ b/html/mobile/tags.html
@@ -5,11 +5,10 @@
 		<meta charset = "UTF-8">
 		<meta name = "viewport" content="width=device-width, initial-scale=1">
 		<title> CHI'13 Schedule </title>
-
-	    <script src="lib/jquery.min.js"></script>
-	    <script src="lib/jquery.mobile-1.1.1.min.js"></script>
+	    <script src="../lib/jquery.min.js"></script>
+	    <script src="../lib/jquery.mobile-1.1.1.min.js"></script>
 	    <script src="/socket.io/socket.io.js"></script>
-	    <script src="lib/phone.js"></script>
+	    <script src="../lib/phone.js"></script>
 	    <link rel="stylesheet" href="css/jquery.mobile.structure-1.1.1.css" />
 		<link rel="stylesheet" href="css/jquery.mobile-1.1.1.min.css" />
 		<link rel="stylesheet" href="css/custom.css"/>
