--- a/html/mobile/talk.html
+++ b/html/mobile/talk.html
@@ -6,8 +6,8 @@
 	<title> CHI'13 Schedule </title>
 	<link rel="stylesheet" href="css/jquery.mobile.structure-1.1.1.css" />
 	<link rel="stylesheet" href="css/jquery.mobile-1.1.1.min.css" />
-	<script src="js/jquery-1.7.1.min.js"> </script>
-	<script src="js/jquery.mobile-1.1.1.min.js"></script>
+	<script src="../lib/jquery-1.7.1.min.js"> </script>
+	<script src="../lib/jquery.mobile-1.1.1.min.js"></script>
 </head>
 <body>
 	<div id="talk" data-role="page" data-add-back-btn="true">
@@ -41,10 +41,10 @@
 			<form>
 			<label for="select-choice-0" class="select"><h2> Interest in attending</h2></label>
 				<select name="rate_talk" id="rate_talk" data-native-menu="false" data-theme="c" >
-				   <option value="one" class="one"> Download</option>
-				   <option value="two" class="two"> May </option>
-				   <option value="three" class="three"> Should </option>
-				   <option value="four" class="four"> Must </option>
+				   <option value="one" class="one"> Download Paper</option>
+				   <option value="two" class="two"> May Attend </option>
+				   <option value="three" class="three"> Should Attend</option>
+				   <option value="four" class="four"> Will Attend </option>
 				</select>
 			</form>
 
