updated ip to work with server instead of localhost

--- a/html/mobile/tags.html
+++ b/html/mobile/tags.html
@@ -27,10 +27,9 @@
 		//Function to add filters, global scope
      	function createFilter(tags) 
 		{
-			 //alert(tags);
-			$.post("http://localhost:8000/filters",
+			//$.post("http://localhost:8000/filters",
 			// Add your ip here to test with mobile device
-			//$.post("http://169.254.125.64:8000/filters",
+			$.post("http://92.243.30.77:8000/filters",
 
 				{
 					"tags": tags
