--- a/html/mobile/phone.html
+++ b/html/mobile/phone.html
@@ -187,9 +187,9 @@
 		//Function used to simulate something was already on the server
 		function createFilter(tags) 
 			{
-				$.post("http://localhost:8000/filters",
+				//$.post("http://localhost:8000/filters",
 				// Add your ip here to test with mobile device
-				//$.post("http://169.254.125.64:8000/filters",
+				$.post("http://92.243.30.77:8000/filters",
 					{
 						"tags": tags
 					},
