--- a/html/test/timeslot.html
+++ b/html/test/timeslot.html
@@ -6,14 +6,23 @@
 	<title>Test API</title>
  	<script src="jquery.min.js"></script>
 	<script type="text/javascript">
-		var GlanceServer = ""; // "http://92.243.30.77:8000"; 
+		var glanceHost = "92.243.30.77:8080";
+
+		function queryURL(url) {
+			if (window.location.host == glanceHost)
+				return '/'+url;
+			else
+				// cross-site request => use JSONP
+				return 'http://'+glanceHost+'/'+url+'?callback=?';	
+		}
+
 		$(document).ready(function() {
 			var query = window.location.search;
 			getTimeslot(query.substring(1, query.length));
 		});
 
 		function getTimeslot(slotId) {
-			$.get(GlanceServer+'/timeslot/'+slotId, function(data) {
+			$.getJSON(queryURL('timeslot/'+slotId), function(data) {
 				// would be good to have the name of the day
 				$('#title').append(data.name + " " + data.start[0]+":"+data.start[1] + " - " + data.end[0]+":"+data.end[1]);
 				for (i in data.sessions) {
@@ -25,7 +34,7 @@
 		}
 
 		function getSession(sessionId) {
-			$.get(GlanceServer+'/session/'+sessionId, function(data) {
+			$.getJSON(queryURL('session/'+sessionId), function(data) {
 				$('#'+sessionId).append("<a href='session.html?"+sessionId+"'>"+data.Title+"</a>");
 			});
 		}
