--- a/html/mobile/tags.html
+++ b/html/mobile/tags.html
@@ -38,6 +38,8 @@
 				{
 					console.log("Updated session: " + data);
 				});
+				//onsync = true;
+				$("now").trigger("click");
 		}
 		</script>	
 			<div data-role="header">
