--- a/html/mobile/tags.html
+++ b/html/mobile/tags.html
@@ -39,7 +39,7 @@
 					console.log("Updated session: " + data);
 				});
 				//onsync = true;
-				$("now").trigger("click");
+				$("#now").trigger("click");
 		}
 		</script>	
 			<div data-role="header">
