removed auto filter call at load since it's not required needed

--- a/html/mobile/phone.html
+++ b/html/mobile/phone.html
@@ -140,7 +140,7 @@
 		};
 
 		//Called at load
-		createTiles();
+		//createTiles();
 
 		//Load existing JSON data from /tiles and assign it to logical tiles
 		function loadData(){
