mmm another stupid typo, must stop working, too late, too many stupid mistakes D:

--- a/html/mobile/phone.html
+++ b/html/mobile/phone.html
@@ -95,7 +95,7 @@
 		var missed =[];
 
 		//Temporary call to function to fake preexisting data
-		createFilter(["visualization", "infoviz"]);
+		//createFilter(["visualization", "infoviz"]);
 
 		//Logical structure for each tile data
 		function Tile (id){
@@ -140,7 +140,7 @@
 		};
 
 		//Called at load
-		//createTiles();
+		createTiles();
 
 		//Load existing JSON data from /tiles and assign it to logical tiles
 		function loadData(){
