Fixed gui bug with breadcrumbs

--- a/html/mobile/tags.html
+++ b/html/mobile/tags.html
@@ -27,9 +27,9 @@
 		//Function to add filters, global scope
      	function createFilter(tags) 
 		{
-			$.post("http://localhost:8000/filters",
+			//$.post("http://localhost:8000/filters",
 			// Add your ip here to test with mobile device
-			// $.post("http://92.243.30.77:8000/filters",
+			 $.post("http://92.243.30.77:8000/filters",
 
 				{
 					"tags": tags
