Since mosaic and madness use twitter, move it to /lib/

--- a/html/mosaic/tiles/announcement.html
+++ b/html/mosaic/tiles/announcement.html
@@ -3,11 +3,12 @@
 <head>
     <link rel="stylesheet" type="text/css" href="../css/tile.css" />
     <link rel="stylesheet" type="text/css" href="../css/tiles/announcement.css" />
+    <link rel="stylesheet" type="text/css" href="/lib/twitter.css" />
     <link href='http://fonts.googleapis.com/css?family=Magra:400,700' rel='stylesheet' type='text/css'>
 
     <script type="text/javascript" src="/lib/jquery.min.js"></script>
 
-    <script type="text/javascript" src="../js/tiles/announcement.js"></script>    
+    <script type="text/javascript" src="/lib/twitter.js"></script>    
 </head>
 <body>
 
