--- a/html/qunit/index.html
+++ b/html/qunit/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>QUnit Example</title>
+  <title>Glance Unit Tests</title>
   <link rel="stylesheet" href="css/qunit.css">
 </head>
 <body>
