--- a/html/mosaic/old/vertical.html
+++ b/html/mosaic/old/vertical.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en"> 
 <head> 
-    <script src="/js/jquery-1.7.1.min.js"></script>
-    <script src="/js/jquery-ui.min.js"></script>
+    <script src="../../lib/jquery-1.7.1.min.js"></script>
+    <script src="../../lib/jquery-ui.min.js"></script>
     <script src="js/jquery.rf.slideshow.js"></script>
-    <script src="js/jquery.svg.min.js"></script>
-    <script src="js/jquery.svgdom.min.js"></script>
-    <script src="js/titleCaps.js"></script>
-    <script type="text/javascript" src="jwplayer/jwplayer.js"></script>
+    <script src="../js/jquery.svg.min.js"></script>
+    <script src="../js/jquery.svgdom.min.js"></script>
+    <script src="../js/titleCaps.js"></script>
+    <script type="text/javascript" src="../../lib/jwplayer/jwplayer.js"></script>
     <script src="data.js"></script>
-    <script src="js/tiles.js"></script>
+    <script src="../js/tiles/tile.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script type="text/javascript">
     var tile = {
