--- a/html/mobile/tags.html
+++ b/html/mobile/tags.html
@@ -27,9 +27,9 @@
 		//Function to add filters, global scope
      	function createFilter(tags) 
 		{
-			//$.post("http://localhost:8000/filters",
+			$.post("http://localhost:8000/filters",
 			// Add your ip here to test with mobile device
-			 $.post("http://92.243.30.77:8000/filters",
+			// $.post("http://92.243.30.77:8000/filters",
 
 				{
 					"tags": tags
@@ -43,19 +43,19 @@
 		}
 		</script>	
 			<div data-role="header">
-				<h1> CHI'13 </h1>
+				<h1 class="mainTitle"> CHI'13 </h1>
 			</div>					
 			<div data-role="content" id="tag_list">
 				<div class="choice_list">
 					<ul data-role="listview" data-theme="a" data-filter="true">
-						<li><a onclick='createFilter(["visualization", "infoviz"])' id="a1" href="phone.html" data-transition="slidedown">Data Visualization</a></li>
-						<li><a onclick='createFilter(["prototyping"])' href="phone.html" data-transition="slidedown">Prototyping</a></li>
-						<li><a onclick='createFilter(["crowdsourcing"])' href="phone.html" data-transition="slidedown">Crowdsourcing</a></li>
-						<li><a onclick='createFilter(["health"])' href="phone.html" data-transition="slidedown">Health</a></li>
-						<li><a onclick='createFilter(["design"])' href="phone.html" data-transition="slidedown">Design</a></li>
-						<li><a onclick='createFilter(["tabletops"])' href="phone.html" data-transition="slidedown">Table Tops</a></li>
-						<li><a onclick='createFilter(["accessibility"])' href="phone.html" data-transition="slidedown">Accessibility</a></li>
-						<li><a onclick='createFilter(["elderly"])' href="phone.html" data-transition="slidedown">Elderly</a></li>
+						<li class="keyword"><a onclick='createFilter(["visualization", "infoviz"])' id="a1" href="phone.html" data-transition="slidedown">Data Visualization</a></li>
+						<li class="keyword"><a onclick='createFilter(["prototyping"])' href="phone.html" data-transition="slidedown">Prototyping</a></li>
+						<li class="keyword"><a onclick='createFilter(["crowdsourcing"])' href="phone.html" data-transition="slidedown">Crowdsourcing</a></li>
+						<li class="keyword"><a onclick='createFilter(["health"])' href="phone.html" data-transition="slidedown">Health</a></li>
+						<li class="keyword"><a onclick='createFilter(["design"])' href="phone.html" data-transition="slidedown">Design</a></li>
+						<li class="keyword"><a onclick='createFilter(["tabletops"])' href="phone.html" data-transition="slidedown">Table Tops</a></li>
+						<li class="keyword"><a onclick='createFilter(["accessibility"])' href="phone.html" data-transition="slidedown">Accessibility</a></li>
+						<li class="keyword"><a onclick='createFilter(["elderly"])' href="phone.html" data-transition="slidedown">Elderly</a></li>
 					</ul>
 				</div>
 			</div>
